Use bitflags crate; added more functions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ authors = ["Adam <sector-f@users.noreply.github.com>"]
 
 [dependencies]
 libc = "0.2.0"
+bitflags = "1.0.3"
 libvirt-sys = { git = "https://github.com/sector-f/new-libvirt-sys.git" }
